Fix whitespace issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,3 +31,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .concern-list-class {
     width: 35%;
 }
+
+span {
+    white-space: pre-wrap;
+}
